--- a/css/lesson1.html
+++ b/css/lesson1.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        /* universal selector */
         *
         {
             margin: 0px;
             letter-spacing: 2px;
             padding:0px;
         }
+
+        /* type selector */
         body 
         {
             background-color: beige;
