--- a/css/lesson10.html
+++ b/css/lesson10.html
@@ -8,12 +8,71 @@
 </head>
 <body>
     <div id="site">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div id="logo"></div>
+        <div id="links">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Dishes</a>
+                    </li>
+                    <li>
+                        <a href="#">Marriage Hall</a>
+                    </li>
+                    <li>
+                        <a href="#">Bithday party</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact us</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div id="menu">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Fast foods</a>
+                    </li>
+                    <li>
+                        <a href="#">Punjabi </a>
+                    </li>
+                    <li>
+                        <a href="#">Gujarati </a>
+                    </li>
+                    <li>
+                        <a href="#">South Indian </a>
+                    </li>
+                    <li>
+                        <a href="#">Pizza</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div id="content"></div>
+        <div id="sidebar"></div>
+        <div id="footer">
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Privacy policy</a>
+                </li>
+                <li>
+                    <a href="#">Terms & Condition</a>
+                </li>
+                <li>
+                    <a href="#">Work with us</a>
+                </li>
+                
+            </ul>
+        </div>
     </div>
 </body>
 </html>
