--- a/css/lesson10.html
+++ b/css/lesson10.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="site">
-        <div id="logo"></div>
+        <div id="logo">
+            <img src="images/logo.png" />
+        </div>
         <div id="links">
             <nav>
                 <ul>
@@ -54,8 +56,34 @@
                 </ul>
             </nav>
         </div>
-        <div id="content"></div>
-        <div id="sidebar"></div>
+        <div id="content">
+            <h2>Page title</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos similique aliquam, earum sit eius recusandae, tenetur molestias illum, maiores debitis nulla voluptate deserunt sapiente voluptatem enim accusantium neque laboriosam inventore porro. Eos quae laudantium laboriosam consequuntur natus, officia animi fugit suscipit esse dolore dolor aliquid ipsa cumque tempore. Alias deserunt dolorem minima veniam molestias adipisci voluptate eaque voluptas sequi, libero accusamus cupiditate molestiae amet vero asperiores iusto quos numquam laboriosam impedit quibusdam! Quos harum officiis praesentium sed doloremque in exercitationem corrupti quibusdam, necessitatibus cum ipsam animi aperiam natus adipisci at nobis rem unde recusandae nemo nesciunt sapiente consequatur minus. Commodi?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos similique aliquam, earum sit eius recusandae, tenetur molestias illum, maiores debitis nulla voluptate deserunt sapiente voluptatem enim accusantium neque laboriosam inventore porro. Eos quae laudantium laboriosam consequuntur natus, officia animi fugit suscipit esse dolore dolor aliquid ipsa cumque tempore. Alias deserunt dolorem minima veniam molestias adipisci voluptate eaque voluptas sequi, libero accusamus cupiditate molestiae amet vero asperiores iusto quos numquam laboriosam impedit quibusdam! Quos harum officiis praesentium sed doloremque in exercitationem corrupti quibusdam, necessitatibus cum ipsam animi aperiam natus adipisci at nobis rem unde recusandae nemo nesciunt sapiente consequatur minus. Commodi?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos similique aliquam, earum sit eius recusandae, tenetur molestias illum, maiores debitis nulla voluptate deserunt sapiente voluptatem enim accusantium neque laboriosam inventore porro. Eos quae laudantium laboriosam consequuntur natus, officia animi fugit suscipit esse dolore dolor aliquid ipsa cumque tempore. Alias deserunt dolorem minima veniam molestias adipisci voluptate eaque voluptas sequi, libero accusamus cupiditate molestiae amet vero asperiores iusto quos numquam laboriosam impedit quibusdam! Quos harum officiis praesentium sed doloremque in exercitationem corrupti quibusdam, necessitatibus cum ipsam animi aperiam natus adipisci at nobis rem unde recusandae nemo nesciunt sapiente consequatur minus. Commodi?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos similique aliquam, earum sit eius recusandae, tenetur molestias illum, maiores debitis nulla voluptate deserunt sapiente voluptatem enim accusantium neque laboriosam inventore porro. Eos quae laudantium laboriosam consequuntur natus, officia animi fugit suscipit esse dolore dolor aliquid ipsa cumque tempore. Alias deserunt dolorem minima veniam molestias adipisci voluptate eaque voluptas sequi, libero accusamus cupiditate molestiae amet vero asperiores iusto quos numquam laboriosam impedit quibusdam! Quos harum officiis praesentium sed doloremque in exercitationem corrupti quibusdam, necessitatibus cum ipsam animi aperiam natus adipisci at nobis rem unde recusandae nemo nesciunt sapiente consequatur minus. Commodi?
+            </p>
+        </div>
+        <div id="sidebar">
+            <div class="advertise">
+                <p>Birthday Cake</p>
+                <span>1 kg Birtday cake made with pure create and original natural colors  & sweetners</span>
+                <p>650</p>
+            </div>
+
+            <div class="advertise">
+                <p>Marriage Cake</p>
+                <span>1 kg Marriage cake made with pure create and original natural colors  & sweetners</span>
+                <p>999</p>
+            </div>
+        </div>
         <div id="footer">
             <ul>
                 <li>
